--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -35,16 +35,19 @@ body {
   &__i-logo {
     width: 94px;
   }
+  &__i-logo:hover, &__i-logo:active, &__i-logo:focus, &__i-logo:focus-within {
+    opacity: .5;
+  }
   &__link {
     color: #4d4959;
     letter-spacing: 3px;
     margin: 0 40px;
     text-decoration: none;
-
-    &:hover {
+    &:hover,
+    &:focus {
       color: #64c29e;
-      cursor: pointer;
       transition: color 300ms ease-out;
+      opacity: .7;
     }
   }
 }
@@ -84,10 +87,8 @@ body {
 
 .new-generation {
   padding: 117px 230px;
-  &__info {
-    max-width: 1080px;
-    margin: 0 auto;
-  }
+  max-width: 1080px;
+  margin: 0 auto;
   &__logo {
     width: 52px;
   }
@@ -136,8 +137,8 @@ body {
 
     }
     .generation-info__item {
-      display: flex;
-      flex-direction: column;
+      //  display: flex;
+      // flex-direction: column;
       width: 33.1%;
     }
     .generation-info__item-info {
@@ -207,8 +208,8 @@ body {
 
 .contact {
   padding: 100px 137px;
-  width: 100%;
-  .contact-logo {
+  //  width: 100%;
+  .contact__logo {
     width: 32px;
   }
   .slick-list {
@@ -227,21 +228,20 @@ body {
   .carousel-indicators .active {
     background-color: #a9afb3;
   }
-  .contact-info {
+  .contact__info {
     margin: 0 auto;
     display: flex;
   }
-  .contact-title {
+  .contact__title {
     max-width: 1040px;
     margin: 33px 0 11px 0;
     text-transform: none;
     letter-spacing: 2px;
   }
-  .contact-time {
-    display: inline;
+  .contact__time {
     color: $MainColor;
   }
-  .contact-text {
+  .contact__text {
     max-width: 1040px;
     font-size: 24px;
     font-style: italic;
@@ -252,10 +252,6 @@ body {
     li {
       color: #a9afb3;
       border-radius: 50%;
-      button {
-        width: 10px;
-        height: 10px;
-      }
     }
   }
 }
@@ -268,10 +264,10 @@ body {
     width: 100%;
     max-width: 33.5333%;
     .gallery__item {
-      display: flex;
+      // display: flex;
       background: no-repeat center / cover;
     }
-    .item--hover {
+    .item-link {
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -283,7 +279,7 @@ body {
       font-weight: bold;
       height: 267px;
       width: 100%;
-      background: rgba(100, 194, 158, 0.8) no-repeat center / cover;
+      background: rgba(100, 194, 158, 0.8) center / cover;
       opacity: 0;
       &:hover {
         background-color: rgba(100, 194, 158, 0.8);
@@ -291,8 +287,12 @@ body {
         cursor: pointer;
         transition: opacity 400ms ease;
       }
+      &:active, &:focus {
+        opacity: 1;
+      }
       &__img {
         width: 51px;
+        margin-bottom: 13px;
       }
     }
 
@@ -319,15 +319,15 @@ body {
     .gallery__item:first-child {
       background-image: url('../images/Layer22.png');
       width: 50%;
-      .item--hover {
-        height: 534px;
+      .item-link {
+        height: 100%;
       }
     }
     .gallery__item:last-child {
       background-image: url('../images/Layer25.png');
       width: 50%;
-      .item--hover {
-        height: 534px;
+      .item-link {
+        height: 100%;
       }
     }
   }
@@ -363,7 +363,7 @@ body {
     color: white;
     padding: 16px 50px;
     text-transform: uppercase;
-    &:hover {
+    &:hover, &:active, &:focus {
       cursor: pointer;
       background-color: rgb(100, 194, 158);
       border: 1px solid rgb(100, 194, 158);
@@ -408,11 +408,55 @@ body {
     border: none;
     line-height: 24px;
     color: #fff;
-    &:hover {
+    &:hover, &:focus, &:active {
       cursor: pointer;
       background-color: #ff5654;
       transition: background 400ms ease-out;
     }
+  }
+}
+
+.address {
+  &__company {
+    font-weight: bold;
+  }
+  &__link {
+    max-width: max-content;
+    display: block;
+    text-decoration: none;
+    color: $MainColor;
+    &:hover {
+      opacity: .5;
+    }
+  }
+  .address__link {
+    &:hover {
+      transition: opacity .5s ease;
+    }
+    &:focus, &:active {
+      opacity: .7;
+    }
+  }
+}
+
+.author {
+  display: flex;
+  align-items: center;
+  font-style: italic;
+  font-size: 14px;
+  line-height: 18px;
+  &__by {
+    color: $MainColor;
+    margin-right: 10px;
+  }
+  &__link {
+    &:hover, &:focus, &:active {
+      opacity: .5;
+      transition: opacity .5s ease;
+    }
+  }
+  &__link-image {
+    width: 55px;
   }
 }
 
@@ -429,62 +473,26 @@ body {
       margin: 0;
     }
   }
-  .address {
-    &__company {
-      font-weight: bold;
-    }
-    &__link {
-      max-width: max-content;
-      display: block;
-      text-decoration: none;
-      color: $MainColor;
-      &:hover {
-        opacity: .5;
-      }
-    }
-    .address__link {
-      &:hover {
-        transition: opacity .5s ease;
-      }
-    }
-  }
   .social-icons {
     display: flex;
     &__link {
       margin-right: 15px;
       &:last-child {
-        margin: 0;
+        margin-right: 0;
+      }
+      &:focus, &:active {
+        opacity: .6;
       }
     }
     &__i-link {
       width: 35px;
     }
     &__i-link:hover {
-      opacity: .5;
+      opacity: .6;
       transition: opacity 400ms ease;
     }
   }
-  .author {
-    display: flex;
-    align-items: center;
-    font-style: italic;
-    font-size: 14px;
-    line-height: 18px;
-    &__by {
-      color: $MainColor;
-      margin-right: 10px;
-    }
-    &__link {
-      text-decoration: none;
-      &:hover {
-        opacity: .5;
-        transition: opacity .5s ease;
-      }
-    }
-    &__link-image {
-      width: 55px;
-    }
-  }
+
 }
 
 @media screen and (max-width: 1024px) {
@@ -530,14 +538,17 @@ body {
   .hamburg-menu {
     position: fixed;
     top: 50px;
-    right: -15px;
-    transform: translate(-50%, -50%);
+    right: 15px;
+    //  transform: translate(-50%, -50%);
     width: 50px;
     height: 40px;
     cursor: pointer;
     z-index: 2;
+    &:hover, &:focus, &:active {
+      opacity: .6;
+    }
     &__burger-nav {
-      width: 50px;
+      width: 100%;
       height: 0;
       position: absolute;
       top: 0;
@@ -561,7 +572,6 @@ body {
     top: 24px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: all .5s;
-    border: none;
     background-color: #64c29e;
   }
 
@@ -608,11 +618,10 @@ body {
     height: 2px;
     width: 0;
     background-color: #64c29e;
-    transition: all .3s ease-in-out;
+   // transition: background-color .3s ease-in-out;
   }
 
-  .menu.open {
-    margin: 0;
+  .menu.menu--open {
     padding: 20px;
     width: 100%;
     height: auto;
@@ -623,8 +632,9 @@ body {
     flex-direction: column;
     z-index: 1;
     transition: all .4s ease;
+
   }
-  .menu.open .menu__link {
+  .menu.menu--open .menu__link {
     margin: 20px 0;
   }
 
