--- a/app/style/style.css
+++ b/app/style/style.css
@@ -17,7 +17,7 @@ body {
   position: absolute;
   width: 100%;
   padding: 35px 0;
-  transition: background .4s ease;
+  transition: background .3s ease;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -203,7 +203,7 @@ body {
       color: #fff;
       font-size: 18px;
       font-weight: bold;
-      height: 267px;
+      min-height: 267px;
       width: 100%;
       background: rgba(100, 194, 158, 0.8) center/cover;
       opacity: 0; }
@@ -211,7 +211,7 @@ body {
         background-color: rgba(100, 194, 158, 0.8);
         opacity: 1;
         cursor: pointer;
-        transition: opacity 400ms ease; }
+        transition: opacity 600ms ease; }
       .gallery__items .item-link:active, .gallery__items .item-link:focus {
         opacity: 1; }
       .gallery__items .item-link__img {
@@ -271,7 +271,7 @@ body {
       cursor: pointer;
       background-color: #64c29e;
       border: 1px solid #64c29e;
-      transition: background 400ms ease-out; }
+      transition: background 300ms ease-out; }
 
 .contact-with-us {
   font-size: 24px;
@@ -306,7 +306,7 @@ body {
     .contact-with-us__btn:hover, .contact-with-us__btn:focus, .contact-with-us__btn:active {
       cursor: pointer;
       background-color: #ff5654;
-      transition: background 400ms ease-out; }
+      transition: background 300ms ease-out; }
 
 .address__company {
   font-weight: bold; }
@@ -320,7 +320,7 @@ body {
     opacity: .5; }
 
 .address .address__link:hover {
-  transition: opacity .5s ease; }
+  transition: opacity .3s ease; }
 
 .address .address__link:focus, .address .address__link:active {
   opacity: .7; }
@@ -336,7 +336,7 @@ body {
     margin-right: 10px; }
   .author__link:hover, .author__link:focus, .author__link:active {
     opacity: .5;
-    transition: opacity .5s ease; }
+    transition: opacity .3s ease; }
   .author__link-image {
     width: 55px; }
 
@@ -363,7 +363,7 @@ body {
       width: 35px; }
     .footer .social-icons__i-link:hover {
       opacity: .6;
-      transition: opacity 400ms ease; }
+      transition: opacity 300ms ease; }
 
 @media screen and (max-width: 1024px) {
   .new-generation {
@@ -421,7 +421,7 @@ body {
     position: absolute;
     top: 24px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    transition: all .5s;
+    transition: top, transform .3s;
     background-color: #64c29e; }
   .hamburg-menu__burger-nav:before {
     top: 8px;
@@ -437,10 +437,11 @@ body {
     top: 17px;
     transform: rotate(135deg); }
   .menu {
-    height: 0;
+    visibility: hidden;
     margin: 0;
     overflow: hidden;
-    background-color: #fff; }
+    background-color: #fff;
+    opacity: 0; }
     .menu__link {
       color: #64c29e; }
       .menu__link :hover {
@@ -459,14 +460,13 @@ body {
   .menu.menu--open {
     padding: 20px;
     width: 100%;
-    height: auto;
+    visibility: visible;
     position: fixed;
     left: 0;
     top: 0;
-    display: flex;
-    flex-direction: column;
+    opacity: 1;
     z-index: 1;
-    transition: all .4s ease; }
+    transition: opacity .3s ease; }
   .menu.menu--open .menu__link {
     margin: 20px 0; }
   .contact-with-us__container {
