--- a/app/style/style.css
+++ b/app/style/style.css
@@ -180,9 +180,6 @@ body {
   .contact .slick-dots {
     bottom: 65px;
     left: 0; }
-    .contact .slick-dots li {
-      color: #a9afb3;
-      border-radius: 50%; }
 
 .gallery {
   width: 100%;
@@ -416,12 +413,12 @@ body {
         width: 100%; }
   .hamburg-menu__burger-nav:before, .hamburg-menu__burger-nav:after {
     content: '';
-    width: 50px;
+    width: 100%;
     height: 6px;
     position: absolute;
     top: 24px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    transition: top, transform .3s;
+    transition: top .5s, transform .3s;
     background-color: #64c29e; }
   .hamburg-menu__burger-nav:before {
     top: 8px;
@@ -440,6 +437,7 @@ body {
     visibility: hidden;
     margin: 0;
     overflow: hidden;
+    position: fixed;
     background-color: #fff;
     opacity: 0; }
     .menu__link {
@@ -461,7 +459,6 @@ body {
     padding: 20px;
     width: 100%;
     visibility: visible;
-    position: fixed;
     left: 0;
     top: 0;
     opacity: 1;
@@ -524,14 +521,16 @@ body {
     padding: 10px; }
     .contact .contact-info {
       padding: 127px 10px; }
+    .contact .contact__logo {
+      margin-top: 20px; }
+    .contact .contact__text {
+      font-size: 20px; }
   .contact-with-us__input {
     width: 260px; }
   .footer {
     padding: 50px; } }
 
 @media screen and (max-width: 380px) {
-  .hamburg-menu {
-    right: -27px; }
   .new-generation {
     padding: 117px 20px; }
     .new-generation__text {
