--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -249,10 +249,6 @@ body {
   .slick-dots {
     bottom: 65px;
     left: 0;
-    li {
-      color: #a9afb3;
-      border-radius: 50%;
-    }
   }
 }
 
@@ -568,12 +564,12 @@ body {
 
   .hamburg-menu__burger-nav:before, .hamburg-menu__burger-nav:after {
     content: '';
-    width: 50px;
+    width: 100%;
     height: 6px;
     position: absolute;
     top: 24px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    transition: top, transform .3s;
+    transition: top .5s, transform .3s;
     background-color: #64c29e;
   }
 
@@ -600,6 +596,7 @@ body {
     visibility: hidden;
     margin: 0;
     overflow: hidden;
+    position: fixed;
     background-color: #fff;
     opacity: 0;
     &__link {
@@ -627,7 +624,7 @@ body {
     padding: 20px;
     width: 100%;
     visibility: visible;
-    position: fixed;
+
     left: 0;
     top: 0;
     opacity: 1;
@@ -730,6 +727,12 @@ body {
     .contact-info {
       padding: 127px 10px;
     }
+    .contact__logo {
+      margin-top: 20px;
+    }
+    .contact__text {
+      font-size: 20px;
+    }
   }
   .contact-with-us {
     &__input {
@@ -743,9 +746,6 @@ body {
 }
 
 @media screen and (max-width: 380px) {
-  .hamburg-menu {
-    right: -27px;
-  }
   .new-generation {
     padding: 117px 20px;
     &__text {
